--- a/面试题68 - II. 二叉树的最近公共祖先.md
+++ b/面试题68 - II. 二叉树的最近公共祖先.md
@@ -1,24 +1,26 @@
 ## 思路
-- p和q只可能有两种分布情况，分布在相同的子树或者分布在不同的子树
-- helper方法可以理解为在某个根节点下找到p或者q
+
+- 这道题递归求解，关键在于递归的两个终止条件
+- `if(root==null) return null;` 表示root是null的时候那么lca必然也是null
+- `if(root==p || root==q) return root;` 表示某个结点为根结点那么lca必然就是根结点
+- 再分析 `TreeNode left = helper(root.left, p, q);` 如果p在左子树而q在右子树，那么遍历到最后由于上一步的终止条件必然是`p=root.left && q=root.right`，这个时候lca才是根结点
 
 ```java
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        return helper(root, p, q);
-    }
-
-    private TreeNode helper(TreeNode root, TreeNode p, TreeNode q) {
-        if(root==null) return null;
-        if(root==p || root==q) return root;
-
-        TreeNode left = helper(root.left, p, q);
-        TreeNode right = helper(root.right, p, q);
-        // left和right都不为null，说明p和q分布在两个子树上，这时候返回root
+        // 这两个终止条件很关键
+        if(root == null){
+            return null;
+        }
+        if(p==root || q==root){
+            return root;
+        }
+        TreeNode left = lowestCommonAncestor(root.left, p, q);
+        TreeNode right = lowestCommonAncestor(root.right, p, q);
         if(left!=null && right!=null){
             return root;
         }
-        return left!=null ? left : right;
+        return left==null ? right : left;
     }
 }
 ```
