--- a/面试题68 - I. 二叉搜索树的最近公共祖先.md
+++ b/面试题68 - I. 二叉搜索树的最近公共祖先.md
@@ -4,10 +4,14 @@
 ```java
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        if(root.val>p.val && root.val>q.val){
-            return lowestCommonAncestor(root.left, p, q);
-        }else if(root.val<p.val && root.val<q.val){
+        if(root==null) return null;
+        if(p==root || q==root) return root;
+        int small = Math.min(p.val, q.val);
+        int large = Math.max(p.val, q.val);
+        if(root.val < small){
             return lowestCommonAncestor(root.right, p, q);
+        }else if(root.val > large){
+            return lowestCommonAncestor(root.left, p, q);
         }else{
             return root;
         }
